[ci skip] Trim empty lines 103a54578310eb70aa73aead4957fe0e4c7bdceb

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7690f397",
+   "id": "c585ed00",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30963345",
+   "id": "3a514058",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e733dd87",
+   "id": "4a3e7dba",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c38dddf",
+   "id": "8aa6e13e",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52b1c7f1",
+   "id": "8f14ca46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6412711d",
+   "id": "b2e6fdc2",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "868478fc",
+   "id": "5e09b7c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3d53125",
+   "id": "5d39dbfd",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af48b2d5",
+   "id": "b736b9fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7269efb3",
+   "id": "d5051006",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28649c58",
+   "id": "d1e1bc61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75fc0310",
+   "id": "7c354c67",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c338cbf4",
+   "id": "1bc1704e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb466217",
+   "id": "4979853d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a51d70da",
+   "id": "27e8c182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c17f8c0a",
+   "id": "cc730961",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110df0f7",
+   "id": "46acf29a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e762c00b",
+   "id": "d4740bf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0dfb9af",
+   "id": "ccffc633",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "340efc83",
+   "id": "769f22ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ee3c62",
+   "id": "921fe2a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15195da9",
+   "id": "24b5e7e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c26ad4a",
+   "id": "2d9591a2",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7126092b",
+   "id": "7a167c7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1668c1ae",
+   "id": "27ebc268",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c6fd2e1",
+   "id": "5a0401e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0a1f0cc",
+   "id": "8f53cac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0337400",
+   "id": "4088afe3",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cebf7c10",
+   "id": "653c67c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9296c6",
+   "id": "c12b15a1",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8e61e97",
+   "id": "fad053cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6fc0ceb",
+   "id": "2db7423d",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "503199aa",
+   "id": "ddf696df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e67a00",
+   "id": "c7c1755b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1aae406",
+   "id": "a3efd9e8",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41be2832",
+   "id": "cd9676df",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3bf48c2",
+   "id": "b3f0d67b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3795bdef",
+   "id": "14b9b318",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ec4354e",
+   "id": "85b0b9fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c487557d",
+   "id": "c57d3daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b121855",
+   "id": "abed04ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0c5ac63",
+   "id": "bfc6da5b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dbd1a25",
+   "id": "6b596b21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,8 +866,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35776041",
-   "metadata": {},
+   "id": "aba689b3",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
@@ -892,12 +894,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d18dbc6e",
+   "id": "962416ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
     "\n",
     "    index_generator = cv_splitter.split(prediction_time.skb.eval())\n",
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33659309",
+   "id": "92d4fcae",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -948,7 +948,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b9f01f1",
+   "id": "336f9185",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def plot_reliability_diagram(cv_predictions):\n",
+    "    # min and max load over all predictions and observations for any folds:\n",
+    "    min_load = np.min(\n",
+    "        [\n",
+    "            min(\n",
+    "                cv_prediction[\"load_mw\"].min(),\n",
+    "                cv_prediction[\"predicted_load_mw\"].min(),\n",
+    "            )\n",
+    "            for cv_prediction in cv_predictions\n",
+    "        ]\n",
+    "    )\n",
+    "    max_load = np.max(\n",
+    "        [\n",
+    "            max(\n",
+    "                cv_prediction[\"load_mw\"].max(),\n",
+    "                cv_prediction[\"predicted_load_mw\"].max(),\n",
+    "            )\n",
+    "            for cv_prediction in cv_predictions\n",
+    "        ]\n",
+    "    )\n",
+    "    scale = altair.Scale(domain=[min_load, max_load])\n",
+    "    chart = None\n",
+    "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
+    "        mean_per_bins = (\n",
+    "            cv_predictions_i.group_by(\n",
+    "                pl.col(\"predicted_load_mw\").qcut(np.linspace(0, 1, 10))\n",
+    "            )\n",
+    "            .agg(\n",
+    "                [\n",
+    "                    pl.col(\"load_mw\").mean().alias(\"mean_load_mw\"),\n",
+    "                    pl.col(\"predicted_load_mw\").mean().alias(\"mean_predicted_load_mw\"),\n",
+    "                ]\n",
+    "            )\n",
+    "            .sort(\"predicted_load_mw\")\n",
+    "        )\n",
+    "\n",
+    "        this_chart = (\n",
+    "            altair.Chart(mean_per_bins)\n",
+    "            .mark_line(tooltip=True)\n",
+    "            .encode(\n",
+    "                x=altair.X(\"mean_predicted_load_mw:Q\", scale=scale),\n",
+    "                y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
+    "            )\n",
+    "        )\n",
+    "        if chart is None:\n",
+    "            chart = this_chart\n",
+    "        else:\n",
+    "            chart += this_chart\n",
+    "    return chart\n",
+    "\n",
+    "\n",
+    "plot_reliability_diagram(cv_predictions).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8808739b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -970,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c4a748b",
+   "id": "cfc7d3e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75ffe399",
+   "id": "288b56a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "031f725f",
+   "id": "80576e0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fae5a7b2",
+   "id": "d13f0ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53d19609",
+   "id": "4b3acd88",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1043,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30390790",
+   "id": "b18162d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37472c4e",
+   "id": "0a3f1db9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fe060cb",
+   "id": "56b84865",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32b5a575",
+   "id": "57987504",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "006b471f",
+   "id": "d3f311ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a89fb9f",
+   "id": "c862bffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57e7fa78",
+   "id": "fce85a64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4fcbd8f",
+   "id": "55da83a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fee8d15a",
+   "id": "3f0c7d2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe88c47d",
+   "id": "9b1a9ab7",
    "metadata": {},
    "outputs": [],
    "source": []
