--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "60c2b1bd",
+   "id": "7fcccf1d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80423734",
+   "id": "4a1819df",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35d60fbb",
+   "id": "5755fd98",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd78d8d5",
+   "id": "47f8e18f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a4d7749",
+   "id": "1e3cc0bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ec4fd0d",
+   "id": "d7bf0d17",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78bff603",
+   "id": "2ef64295",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5718674f",
+   "id": "abbee2c2",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "194628fe",
+   "id": "ae47e417",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "590cfd2a",
+   "id": "1bac2adf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b0a6d8d",
+   "id": "890658c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28b67dc0",
+   "id": "48a2a6c2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "099bbba7",
+   "id": "33389c38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f106570",
+   "id": "a047b5e6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6c68c47",
+   "id": "30153ed2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73626a5a",
+   "id": "80804d6b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b4f043b",
+   "id": "d5902df6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4abea5ce",
+   "id": "bf760b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c56fccec",
+   "id": "d55195ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be38159",
+   "id": "793a2ef0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf19ec4b",
+   "id": "6b128455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a92701c",
+   "id": "951534ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b292976",
+   "id": "35b625da",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7143e52c",
+   "id": "916967d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebfc56b2",
+   "id": "bc08b5e5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1d50e14",
+   "id": "546f970e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97214057",
+   "id": "22e9a19e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88001c8f",
+   "id": "cf9a2b95",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26da475a",
+   "id": "08fd758b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f40a7e0",
+   "id": "0eeae65d",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65ebd2c6",
+   "id": "7c1d4533",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "619fcc2e",
+   "id": "510d7195",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47229833",
+   "id": "b55bc977",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1c7072d",
+   "id": "d8db85b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28e3954d",
+   "id": "8430af31",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8181030e",
+   "id": "f041b930",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "404a4cb9",
+   "id": "dade3258",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdd97cc9",
+   "id": "9ad8771c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f22c6ec9",
+   "id": "77c667ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8115239",
+   "id": "27e74944",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad6bd1f",
+   "id": "3b611485",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31c89b2e",
+   "id": "6d3b05d1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9ea89f3",
+   "id": "3f88c9d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,8 +866,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f05333bb",
-   "metadata": {},
+   "id": "d5843c1e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import make_scorer, mean_absolute_percentage_error, get_scorer\n",
@@ -892,12 +894,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd5c672",
+   "id": "ee7caaee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
     "\n",
     "    index_generator = cv_splitter.split(prediction_time.skb.eval())\n",
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80c1f8f0",
+   "id": "6601ded0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -948,7 +948,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04ada6d4",
+   "id": "9fe4e627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "def plot_reliability_diagram(cv_predictions):\n",
+    "    # min and max load over all predictions and observations for any folds:\n",
+    "    min_load = np.min(\n",
+    "        [\n",
+    "            min(\n",
+    "                cv_prediction[\"load_mw\"].min(),\n",
+    "                cv_prediction[\"predicted_load_mw\"].min(),\n",
+    "            )\n",
+    "            for cv_prediction in cv_predictions\n",
+    "        ]\n",
+    "    )\n",
+    "    max_load = np.max(\n",
+    "        [\n",
+    "            max(\n",
+    "                cv_prediction[\"load_mw\"].max(),\n",
+    "                cv_prediction[\"predicted_load_mw\"].max(),\n",
+    "            )\n",
+    "            for cv_prediction in cv_predictions\n",
+    "        ]\n",
+    "    )\n",
+    "    scale = altair.Scale(domain=[min_load, max_load])\n",
+    "    chart = None\n",
+    "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
+    "        mean_per_bins = (\n",
+    "            cv_predictions_i.group_by(\n",
+    "                pl.col(\"predicted_load_mw\").qcut(np.linspace(0, 1, 10))\n",
+    "            )\n",
+    "            .agg(\n",
+    "                [\n",
+    "                    pl.col(\"load_mw\").mean().alias(\"mean_load_mw\"),\n",
+    "                    pl.col(\"predicted_load_mw\").mean().alias(\"mean_predicted_load_mw\"),\n",
+    "                ]\n",
+    "            )\n",
+    "            .sort(\"predicted_load_mw\")\n",
+    "        )\n",
+    "\n",
+    "        this_chart = (\n",
+    "            altair.Chart(mean_per_bins)\n",
+    "            .mark_line(tooltip=True)\n",
+    "            .encode(\n",
+    "                x=altair.X(\"mean_predicted_load_mw:Q\", scale=scale),\n",
+    "                y=altair.Y(\"mean_load_mw:Q\", scale=scale),\n",
+    "            )\n",
+    "        )\n",
+    "        if chart is None:\n",
+    "            chart = this_chart\n",
+    "        else:\n",
+    "            chart += this_chart\n",
+    "    return chart\n",
+    "\n",
+    "\n",
+    "plot_reliability_diagram(cv_predictions).interactive()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de4cadee",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -970,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dcc780a",
+   "id": "551a2c31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e04281f6",
+   "id": "00f6b994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -990,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955700cf",
+   "id": "bc506181",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41cc4b0a",
+   "id": "8ab4e441",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b82d7ade",
+   "id": "baf2c8c4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1043,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "174c73e7",
+   "id": "ba9d8ee6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f139694",
+   "id": "529b8cb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1069,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b190118a",
+   "id": "4a5787e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9dd113b",
+   "id": "63c63383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da32e892",
+   "id": "93260434",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1165,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9a0f63d",
+   "id": "e0e0048a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2859ce62",
+   "id": "c9f06d24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7ac4b0e",
+   "id": "89ca2e8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50674a52",
+   "id": "e338a8a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a6d3172",
+   "id": "a964e512",
    "metadata": {},
    "outputs": [],
    "source": []
