[ci skip] Make it possible to change the number of bins ad006570464730694006fd5b6df0ec3700b1b057

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c585ed00",
+   "id": "18241a98",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a514058",
+   "id": "b8e0690c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a3e7dba",
+   "id": "4b22f0e2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa6e13e",
+   "id": "efd44d78",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f14ca46",
+   "id": "e504d71d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2e6fdc2",
+   "id": "70bfafa4",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e09b7c3",
+   "id": "d76d8775",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d39dbfd",
+   "id": "682b6f8e",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b736b9fb",
+   "id": "6b9b7369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5051006",
+   "id": "5eb4e3d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1e1bc61",
+   "id": "214e46be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c354c67",
+   "id": "ec6fb791",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bc1704e",
+   "id": "b0444498",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4979853d",
+   "id": "69f14cbe",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e8c182",
+   "id": "634b8b33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc730961",
+   "id": "274999d2",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46acf29a",
+   "id": "e0a41581",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4740bf7",
+   "id": "a0a54e99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccffc633",
+   "id": "33b9d7cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "769f22ff",
+   "id": "9ed21487",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "921fe2a0",
+   "id": "8d175382",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24b5e7e9",
+   "id": "f41cdb9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d9591a2",
+   "id": "e5ec3124",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a167c7d",
+   "id": "ef499868",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27ebc268",
+   "id": "fd81acaa",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a0401e5",
+   "id": "d62f4fce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f53cac3",
+   "id": "23dc414b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4088afe3",
+   "id": "f9ea4877",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653c67c8",
+   "id": "c74b2141",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c12b15a1",
+   "id": "b74457f2",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fad053cf",
+   "id": "1d6f13f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2db7423d",
+   "id": "1ed12ab9",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddf696df",
+   "id": "ea6552cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7c1755b",
+   "id": "37fa0adb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3efd9e8",
+   "id": "06038961",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd9676df",
+   "id": "0ec2e802",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3f0d67b",
+   "id": "001ec5e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14b9b318",
+   "id": "f1c5b0ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85b0b9fa",
+   "id": "f3c322bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c57d3daa",
+   "id": "b9b47169",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abed04ed",
+   "id": "7efd3090",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfc6da5b",
+   "id": "53dadf00",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b596b21",
+   "id": "dc724b93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aba689b3",
+   "id": "05460028",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "962416ff",
+   "id": "d405cd5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92d4fcae",
+   "id": "dea61ad7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -948,14 +948,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "336f9185",
+   "id": "41c90a70",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "\n",
-    "def plot_reliability_diagram(cv_predictions):\n",
+    "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
     "    # min and max load over all predictions and observations for any folds:\n",
     "    min_load = np.min(\n",
     "        [\n",
@@ -980,7 +980,7 @@
     "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
     "        mean_per_bins = (\n",
     "            cv_predictions_i.group_by(\n",
-    "                pl.col(\"predicted_load_mw\").qcut(np.linspace(0, 1, 10))\n",
+    "                pl.col(\"predicted_load_mw\").qcut(np.linspace(0, 1, n_bins))\n",
     "            )\n",
     "            .agg(\n",
     "                [\n",
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8808739b",
+   "id": "6b491b42",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfc7d3e7",
+   "id": "05304105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "288b56a5",
+   "id": "25f1bf97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80576e0d",
+   "id": "5e89a28a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d13f0ba3",
+   "id": "8b6ee7b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b3acd88",
+   "id": "e775245f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b18162d9",
+   "id": "de8487d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a3f1db9",
+   "id": "48421a2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56b84865",
+   "id": "5a45ecfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57987504",
+   "id": "b78ff634",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3f311ac",
+   "id": "fc5f46e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c862bffe",
+   "id": "ac45ec81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fce85a64",
+   "id": "c789c3ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55da83a0",
+   "id": "d5236b07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f0c7d2b",
+   "id": "48a0ae8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b1a9ab7",
+   "id": "6e182e27",
    "metadata": {},
    "outputs": [],
    "source": []
