--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7fcccf1d",
+   "id": "978c101f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a1819df",
+   "id": "0da59545",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5755fd98",
+   "id": "47ee6041",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f8e18f",
+   "id": "e5dbe156",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e3cc0bf",
+   "id": "5238d089",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7bf0d17",
+   "id": "752a786f",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ef64295",
+   "id": "d6bcb5ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbee2c2",
+   "id": "b20671d6",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae47e417",
+   "id": "ce35456c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bac2adf",
+   "id": "a0742d36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "890658c3",
+   "id": "f60ad5e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48a2a6c2",
+   "id": "3ce46ff0",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33389c38",
+   "id": "ae22665d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a047b5e6",
+   "id": "38ec0884",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30153ed2",
+   "id": "6b7c5e73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80804d6b",
+   "id": "a78fd94d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5902df6",
+   "id": "50e7fb48",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf760b01",
+   "id": "119df883",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d55195ca",
+   "id": "eeb5bc97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "793a2ef0",
+   "id": "fd1741c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b128455",
+   "id": "5f42ac5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "951534ac",
+   "id": "1ed9e494",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35b625da",
+   "id": "24b6c703",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "916967d6",
+   "id": "d4ea527f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc08b5e5",
+   "id": "dbb63661",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "546f970e",
+   "id": "f34bb097",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22e9a19e",
+   "id": "b99b5754",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf9a2b95",
+   "id": "8611b0a7",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08fd758b",
+   "id": "ba9fa48a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eeae65d",
+   "id": "f20403bf",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c1d4533",
+   "id": "4789d351",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "510d7195",
+   "id": "9ae44a8f",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55bc977",
+   "id": "aa8ebe44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8db85b7",
+   "id": "e385b57c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8430af31",
+   "id": "9ed9183f",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f041b930",
+   "id": "a92426ca",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dade3258",
+   "id": "61090ec6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad8771c",
+   "id": "c40e9974",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77c667ea",
+   "id": "ef3f0dea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27e74944",
+   "id": "99c13b59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b611485",
+   "id": "c966754e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d3b05d1",
+   "id": "4e3dae1a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f88c9d8",
+   "id": "c4189989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5843c1e",
+   "id": "d05d736d",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -894,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee7caaee",
+   "id": "5821490b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6601ded0",
+   "id": "149c60a4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -948,14 +948,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fe4e627",
+   "id": "9883e001",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
     "\n",
-    "def plot_reliability_diagram(cv_predictions):\n",
+    "def plot_reliability_diagram(cv_predictions, n_bins=10):\n",
     "    # min and max load over all predictions and observations for any folds:\n",
     "    min_load = np.min(\n",
     "        [\n",
@@ -980,7 +980,7 @@
     "    for i, cv_predictions_i in enumerate(cv_predictions):\n",
     "        mean_per_bins = (\n",
     "            cv_predictions_i.group_by(\n",
-    "                pl.col(\"predicted_load_mw\").qcut(np.linspace(0, 1, 10))\n",
+    "                pl.col(\"predicted_load_mw\").qcut(np.linspace(0, 1, n_bins))\n",
     "            )\n",
     "            .agg(\n",
     "                [\n",
@@ -1012,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de4cadee",
+   "id": "bd547c74",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1034,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "551a2c31",
+   "id": "11fedc16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f6b994",
+   "id": "4380f9fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc506181",
+   "id": "b26a6a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1075,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ab4e441",
+   "id": "d3b86c2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1091,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baf2c8c4",
+   "id": "6c31d9d2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1107,7 +1107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba9d8ee6",
+   "id": "21c0f895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "529b8cb4",
+   "id": "6b75f971",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1133,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a5787e3",
+   "id": "46b82091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c63383",
+   "id": "1300790c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93260434",
+   "id": "e238e7d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0e0048a",
+   "id": "3e107fba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1240,7 +1240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9f06d24",
+   "id": "f432179b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89ca2e8a",
+   "id": "c4df04c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1286,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e338a8a1",
+   "id": "d5d875e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a964e512",
+   "id": "2bc0eb39",
    "metadata": {},
    "outputs": [],
    "source": []
